0.04

0.03 2021-11-13T12:35:10+01:00
 - Add link to File::Find::Rule::DjVu in doc.
 - Add two tests.
 - Skip TODO file from dist.

0.02 2021-05-30T13:02:51+02:00
 - Fix test dependencies.

0.01 2021-05-30T12:58:33+02:00
 - First version.