@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.21 version.
 
 0.03 2021-11-13T12:35:10+01:00
  - Add link to File::Find::Rule::DjVu in doc.
